--- a/quantities/meta.yaml
+++ b/quantities/meta.yaml
@@ -1,11 +1,11 @@
 package:
   name: quantities
-  version: "0.10.1"
+  version: "0.11.1"
 
 source:
-  fn: quantities-0.10.1.tar.gz
-  url: https://pypi.python.org/packages/source/q/quantities/quantities-0.10.1.tar.gz
-  md5: e924e21c0a5ddc9ebcdacbbe511b8ec7
+  fn: quantities-0.11.1.zip
+  url: https://pypi.python.org/packages/source/q/quantities/quantities-0.11.1.zip
+  md5: f4c6287bfd2e93322b25a7c1311a0243
 #  patches:
    # List any patch files here
    # - fix.patch
@@ -37,7 +37,6 @@ requirements:
 test:
   # Python imports
   imports:
-    - numpy
     - quantities
     - quantities.constants
     - quantities.tests
@@ -51,9 +50,9 @@ test:
   # You can also put a file called run_test.py in the recipe that will be run
   # at test time.
 
-  #requires:
+  # requires:
     # Put any additional test requirements here.  For example
-    # - numpy
+    # - nose
 
 about:
   home: http://packages.python.org/quantities
