--- a/recipes/30_python-numpy/block_diag_ilu/meta.yaml
+++ b/recipes/30_python-numpy/block_diag_ilu/meta.yaml
@@ -8,7 +8,7 @@ source:
   md5: c51e59508a09e55fa2598ed41db086e7
 
 build:
-  number: 1
+  string: np{{np}}py{{py}}_o0
   features:
     - openblas
 
