--- a/recipes/10_non-python/10_lapack/meta.yaml
+++ b/recipes/10_non-python/10_lapack/meta.yaml
@@ -13,10 +13,10 @@ build:
 requirements:
   build:
     - cmake
-    - gcc
+#    - gcc
 
-  run:
-    - libgcc
+#  run:
+#    - libgcc
 
 about:
   home: http://www.netlib.org/lapack
