--- a/recipes/10_non-python/30_sundials/meta.yaml
+++ b/recipes/10_non-python/30_sundials/meta.yaml
@@ -2,6 +2,9 @@ package:
   name: sundials
   version: "2.6.2"
 
+build:
+  number: 1
+
 source:
   fn: sundials-2.6.2.tar.gz
   url: http://pkgs.fedoraproject.org/repo/pkgs/sundials/sundials-2.6.2.tar.gz/3deeb0ede9f514184c6bd83ecab77d95/sundials-2.6.2.tar.gz
@@ -9,10 +12,13 @@ source:
 
 
 requirements:
-  run:
-    - lapack
   build:
+    # - gcc
     - cmake
+    - lapack
+
+  run:
+    # - libgcc
     - lapack
 
 test:
