--- a/recipes/30_python-numpy/block_diag_ilu/meta.yaml
+++ b/recipes/30_python-numpy/block_diag_ilu/meta.yaml
@@ -7,13 +7,18 @@ source:
     url: https://pypi.python.org/packages/source/b/block_diag_ilu/block_diag_ilu-0.2.1.tar.gz#md5=c8ab75427ced5499be251cda0a701f89
     md5: c8ab75427ced5499be251cda0a701f89
 
+build:
+  number: 1
+
 requirements:
   build:
+    # - gcc
     - python
     - numpy
     - cython
     - lapack
   run:
+    # - libgcc
     - python
     - numpy
     - lapack
