--- a/recipes/40_python/pygslodeiv2/meta.yaml
+++ b/recipes/40_python/pygslodeiv2/meta.yaml
@@ -1,32 +1,33 @@
 package:
-    name: pygslodeiv2
-    version: 0.5.1
+  name: pygslodeiv2
+  version: 0.5.1
 
 source:
-    fn: pygslodeiv2-0.5.1.tar.gz
-    url: https://pypi.python.org/packages/source/p/pygslodeiv2/pygslodeiv2-0.5.1.tar.gz#md5=6799d955b3cd4c92f2cf8bbe09506419
-    md5: 6799d955b3cd4c92f2cf8bbe09506419
+  fn: pygslodeiv2-0.5.1.tar.gz
+  url: https://pypi.python.org/packages/source/p/pygslodeiv2/pygslodeiv2-0.5.1.tar.gz#md5=6799d955b3cd4c92f2cf8bbe09506419
+  md5: 6799d955b3cd4c92f2cf8bbe09506419
 
 build:
-    number: 0
+  number: 1
 
 requirements:
-    build:
-        - python
-        - numpy
-        - gsl
-        - cython
-    run:
-        - numpy
-        - python
-        - gsl
+  build:
+    # - gcc
+    - python
+    - numpy
+    - gsl
+  run:
+    # - libgcc
+    - numpy
+    - python
+    - gsl
 
 test:
-    imports:
-        - pygslodeiv2
-    requires:
-        - pytest
+  imports:
+    - pygslodeiv2
+  requires:
+    - pytest
 
 about:
-    home: https://github.com/bjodah/pygslodeiv2
-    license: GNU GPL v3
+  home: https://github.com/bjodah/pygslodeiv2
+  license: GNU GPL v3
