--- a/recipes/10_non-python/10_lapack/meta.yaml
+++ b/recipes/10_non-python/10_lapack/meta.yaml
@@ -8,15 +8,15 @@ source:
   sha1: 7e993de16d80d52b22b6093465eeb90c93c7a2e7
 
 build:
-  number: 2
+  number: 3
 
 requirements:
   build:
     - cmake
     # - gcc
 
-  # run:
-  #   - libgcc
+  run:
+    - libgcc
 
 about:
   home: http://www.netlib.org/lapack
